syntax ="proto3";

option go_package = "training-go/go-session9-crud-user-grpc/proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
package proto.user_service.v1;

service UserService{
    rpc GetUsers(google.protobuf.Empty) returns (GetUserResponse);
    rpc GetUserByID(GetUserByIDRequest) returns (GetUserByIDResponse);
    rpc CreateUser(CreateUserRequest) returns (MutationResponse);
    rpc UpdateUser(UpdateUserRequest) returns (MutationResponse);
    rpc DeleteUser(DeleteUserRequest) returns (MutationResponse);
}

message User{
    int32 id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message GetUserResponse{
   repeated User users = 1;
}

message GetUserByIDRequest{
    int32 id = 1;
}

message GetUserByIDResponse{
    User user = 1;
}

message UpdateUserRequest{
    int32 id = 1;
    string name = 2;
    string email = 3;
    string password = 4;

}

message DeleteUserRequest{
    int32 id = 1;
}

message CreateUserRequest{
    string name = 1;
    string email = 2;
    string password = 3;
}

message MutationResponse{
    string message = 1;
}